3-k8s-manifests/namespace.yaml
# 3-k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: diploma-prod
