3-k8s-manifests/service-canary.yaml
# 3-k8s-manifests/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-canary
  namespace: diploma-prod
spec:
  type: NodePort
  selector:
    app: go-app # Service направляє трафік на всі поди з цим лейблом (і V1, і V2)
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 32002
    protocol: TCP
#  type: LoadBalancer # Для GCP, щоб отримати зовнішній IP для доступу
