3-k8s-manifests/service-stable.yaml
# 3-k8s-manifests/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-stable
  namespace: diploma-prod
spec:
  selector:
    app: go-app # Service направляє трафік на всі поди з цим лейблом (і V1, і V2)
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 32001
    protocol: TCP
#  type: LoadBalancer # Для GCP, щоб отримати зовнішній IP для доступу
