3-k8s-manifests/ingress.yaml
# 3-k8s-manifests/service-stable.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diploma-services-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # вимкнено для тесту без сертифікатів
spec:
  ingressClassName: nginx
  rules:
  - host: jenkins.diploma.sytes.net # Ваш домен No-IP
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins # назва сервісу вашого дженкінса
            port:
              number: 8080
  - host: argocd.diploma.sytes.net # Ваш домен No-IP
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server # назва сервісу вашого арго
            port:
              number: 80
  # - host: argo-rollouts.diploma.sytes.net # Ваш домен No-IP
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: argo-rollouts-dashboard # назва сервісу вашого арго
  #           port:
  #             number: 3100
  - host: sonarqube.diploma.sytes.net # Ваш домен No-IP
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarqube-sonarqube # назва сервісу вашого арго
            port:
              number: 9000
